--- a/style.css
+++ b/style.css
@@ -58,3 +58,61 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+main {
+    display: flex;
+    padding-top: 90px;
+    padding-inline: 32px;
+}
+
+.main-text {
+    width: 50%;
+    font-family: 'Inter'; /*TODO: import front*/
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    color: #1C1E52;
+    margin-bottom: 22px;
+}
+
+.main-text-par  {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+    margin-bottom: 32px;
+}
+
+.know-more-buttom {
+    background: linear-gradient(180deg, #34E06F 0%, #07B464 100%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 4px rgba(255, 255, 255, 0.25), inset 0px -2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 12px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+    padding: 15px 60px;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.main-img {
+    width: 667px;
+    margin-top: -135px;
+    padding-right: 20px;
+}
+
+.main-img-img {
+    width: 100%;
+}
+
+.made-by {
+    text-align: center;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 64px;
+    color: #1C1E52;
+}
