--- a/style.css
+++ b/style.css
@@ -198,8 +198,11 @@ h1 {
     }
 
     .way {
-        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 246px;
         display: block;
+        justify-content: center;
         border: 0.663073px solid #DEDEDE;
         border-radius: 6.63073px;
     }
@@ -207,6 +210,7 @@ h1 {
     .atom {
         display: flex;
         justify-content: center;
+        padding-top: 26px;
         padding-bottom: 6px;
         }
     }
@@ -222,13 +226,14 @@ h1 {
         font-size: 16px;
         line-height: 24px;
         letter-spacing: 0.0663073px;
-        padding-inline: 36%;
+        padding-inline: 29%;
         padding-bottom: 12px;
     }
 
     .main-test-par-way {
         width: 100%;
-        padding-inline: 27%;
+        padding-bottom: 42px;
+        padding-inline: 19.9%;
         font-family: 'Inter';
         font-style: normal;
         font-size: 11.9353px;
